--- a/conf/pgpool.conf.template
+++ b/conf/pgpool.conf.template
@@ -78,7 +78,7 @@ backend_flag{{ tokens[0] }} = 'ALLOW_TO_FAILOVER'
 
 # - Authentication -
 
-enable_pool_hba = off
+enable_pool_hba = on
                                    # Use pool_hba.conf for client authentication
 pool_passwd = 'pool_passwd'
                                    # File name of pool_passwd for md5 authentication.
@@ -275,10 +275,10 @@ black_function_list = 'nextval,setval'
 # MASTER/SLAVE MODE
 #------------------------------------------------------------------------------
 
-master_slave_mode = off
+master_slave_mode = on
                                    # Activate master/slave mode
                                    # (change requires restart)
-master_slave_sub_mode = 'slony'
+master_slave_sub_mode = 'stream'
                                    # Master/slave sub mode
                                    # Valid values are combinations slony or
                                    # stream. Default is slony.
@@ -289,12 +289,12 @@ master_slave_sub_mode = 'slony'
 sr_check_period = 0
                                    # Streaming replication check period
                                    # Disabled (0) by default
-sr_check_user = 'nobody'
+sr_check_user = 'replication'
                                    # Streaming replication check user
                                    # This is necessary even if you disable
                                    # streaming replication delay check with
                                    # sr_check_period = 0
-sr_check_password = ''
+sr_check_password = 'replication'
                                    # Password for streaming replication check user
 delay_threshold = 0
                                    # Threshold before not dispatching query to standby node
@@ -370,7 +370,7 @@ health_check_retry_delay = 1
 # FAILOVER AND FAILBACK
 #------------------------------------------------------------------------------
 
-failover_command = ''
+failover_command = '/var/lib/postgresql/failover.sh %h %H /var/lib/postgresql/state/recovery_trigger'
                                    # Executes this command at failover
                                    # Special values:
                                    #   %d = node id
